[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esb"
dynamic = ["version"]
description = 'Script your way to rescue Christmas as part of the ElfScript Brigade team.'
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
scripts = { esb = "esb.cli:main" }
keywords = ["Advent of Code", "CLI", "AoC", "Elf", "Elves", "ElfScript Brigade"]
authors = [
  { name = "Luiz Eduardo Amaral", email = "luizamaral306@gmail.com" },
]
maintainers = [
  { name = "Luiz Eduardo Amaral", email = "luizamaral306@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Environment :: Console",
  "Topic :: Software Development :: Code Generators",
]
dependencies = ["rich==13.7.0", "beautifulsoup4==4.12.3", "plotext==5.3.2"]

[project.urls]
Documentation = "https://github.com/luxedo/esb/README.md"
Repository = "https://github.com/luxedo/esb.git"
Issues = "https://github.com/luxedo/esb/issues"
Source = "https://github.com/luxedo/esb"

[tool.hatch.version]
path = "src/esb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src/",
]

[tool.hatch.envs.default]
dependencies = [
  "pre-commit>3.1",
  "coverage[toml]>=6.5",
  "pytest",
  "mypy>=1.0.0",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report -m",
]
cov = [
  "test-cov",
  "cov-report",
]
cov-xml = [
  "cov",
  "coverage xml",
]
check = "mypy --install-types --non-interactive {args:src/esb tests}"

[tool.mypy]
exclude = ["esb/boilers"]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.coverage.run]
source_pkgs = ["esb", "tests"]
branch = true
parallel = true
omit = [
  "src/esb/boilers",
  "src/esb/__main__.py",
  "tests/**/*"
]

[tool.coverage.paths]
esb = ["src/esb", "*/esb/src/esb"]
tests = ["tests", "*/esb/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/esb/*.py", "tests/**/*.py"]
exclude = ["src/esb/boilers"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
ignore = ["TRY", "ARG002"]
